create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1413,13 +1413,31 @@ body {
   background: #ff3366 !important;
   box-shadow: none !important;
 }
-.cid-rF2Hzkutg7 {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
+.cid-rF2KSXUVbj {
+  background-image: url("../../../assets/images/58170415114-05308-05038-05149-05320-05049-05073-dynamicmoc2-a-a0-2000x1500.jpg");
 }
-.cid-rF2Hzkutg7 P {
-  color: #767676;
+.cid-rF2KSXUVbj .icons-media-container {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding-top: 4rem;
+}
+.cid-rF2KSXUVbj .icons-media-container .mbr-iconfont {
+  font-size: 96px;
+  color: #ffffff;
+}
+.cid-rF2KSXUVbj .icons-media-container .icon-block {
+  padding-bottom: 1rem;
+}
+.cid-rF2KSXUVbj .mbr-text {
+  color: #ffffff;
+}
+.cid-rF2KSXUVbj .card {
+  padding-bottom: 1.5rem;
 }
 .cid-rESOloBYd0 {
   padding-top: 90px;
