create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1520,3 +1520,16 @@ body {
 .cid-rESOloBYd0 .card-img:hover .mbr-section-btn {
   opacity: 1;
 }
+.cid-rFvX9EOYAN {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/47005450436-soft7-a-a1-2000x1333.jpeg");
+}
+.cid-rFvUJloZs7 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-rFvUJloZs7 .media-container-row .mbr-text {
+  color: #efefef;
+}
