--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1528,8 +1528,8 @@ body {
 .cid-rFvUJloZs7 {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #2e2e2e;
+  background-color: #efefef;
 }
 .cid-rFvUJloZs7 .media-container-row .mbr-text {
-  color: #efefef;
+  color: #cccccc;
 }
